Fix box shadow on mobile devices

--- a/client/components/language-picker/modal.scss
+++ b/client/components/language-picker/modal.scss
@@ -43,6 +43,13 @@
 		flex: none;
 		margin-bottom: 0;
 		z-index: 10;
+		
+		@include breakpoint( '<660px' ) {
+			.search.has-focus {
+				margin: 0 4px;
+				width: calc(100% - 8px);
+			}
+		}
 	}
 }
 
